tests/errors/validation/var-inside-namespace.fn
---
Description: Var inside a namespace, with usage
Expected: FN2000, FN3203
---

namespace BadNs
{
    var orphan = 5
}

type Program
{
    static fn Main -> i32
    {
        return BadNs.orphan
    }
}
